Updated at hyperdev.com

--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,7 @@
                 <br>
                 <a class="right green-text text-lighten-1" href="https://www.flickr.com/photos/14829735@N00/14906849355/"><i class="fa fa-picture-o"></i> img by dullhunk</a>
                 <br>
-                <a class="right green-text text-lighten-1" href="http://sophiabrandt.com/">coded by S.B. with <i class="fa fa-heart"></i> and ES6</a>
+                <a class="right green-text text-lighten-1" href="https://github.com/sophiabrandt/fcc-random-quote-machine">coded with ES6 by S.B. <i class="fa fa-github"></i></a>
               </div>
             </div>
           </div>
